# fivt-2013-advanced-a

./: MakeFile  README.md  bigfile.REMOVED.git-id  main.cpp
Alekseev/: .gitignore  sort.cpp
Alekseev/Task 0 - Sorting file names/: start.h  test.cpp
Alekseev/sort/: solution.h  sort.cpp  test.cpp
Alexeev/: sort.cpp
Ivaschenko/: sort.cpp
Ivaschenko/0. filenamesorter/: sort.cpp  test.h
Ivaschenko/cones/: main.cpp
Ivaschenko/convexhull3d/: main.cpp
Ivaschenko/editdist/: editdist.h  editdist.pro  main.cpp
Ivaschenko/expression-maximisation/: expression-maximisation.pro  expression-maximistion.h
Ivaschenko/externalfilesorter/: abstractreader.h  abstractwriter.h  binaryfilereader.h  externalfilesorter.h  externalfilesorter.pro  externalsorter.h  gtest.pri  inputstreamreader.h  outputstreamwriter.h  reader.h  test.cpp  testintegralstreamreader.cpp
Ivaschenko/filenamesorter/: sort  token.h
Ivaschenko/graph/: graph.h  graph.pro  gtest.pri  main.cpp
Ivaschenko/mergeableheap/: gtest.pri  (+1 more)
Khismatullin/: sort.cpp
Kolodzey/: .gitignore  filesort.cpp  somesort.h
Kuzmichev/: code.cpp  new_file.txt
Pershakov/: sort  sort.cpp
Podkin/: a.cpp
Rusak/: project.h
Ryabov/: sort.cpp  stl.h
Ryabov/Graph/: CMakeLists.txt  Makefile  algo.h  build.sh  graph.cc  graph.cpp  graph.h  main.cpp
Surin/: Makefile  functions.h  main.cpp  sort.cpp  test.cpp
Surin/graph/: CMakeLists.txt  graph.cpp  graph.h  lists_of_incidents.h  main.cpp
Zhuravlyov/: dz0.cpp
example_test/: .a.cpp.swp  a.cpp  a.out
real_test/: answer.cpp  input.cpp
xcode-for-git.xcodeproj/: project.pbxproj
(+1054 files in other folders)
